# PyBDX

./: .env.example  .flake8  .gitignore  PyBDX_analyze.py  PyBDX_run.py  config.py  fetch.sh  mypy.ini  pyproject.toml  requirements.txt  run.py  vs.code-workspace
lib/: DataSoup.py  PyBDX.py  PyBDXBuilder.py  __init__.py  config.py  constants.py  utilities.py
scripts/: format.sh  lint.sh
